updated nginx configuration with payload size for each component

--- a/charts/forms-flow-ai/templates/configmap.yaml
+++ b/charts/forms-flow-ai/templates/configmap.yaml
@@ -60,3 +60,6 @@ data:
     IPAAS_API_BASE_URL: "{{ .Values.ipaas.api_base_url }}"
     CONFIGURE_LOGS: "{{ .Values.configure_logs }}"
     KEYCLOAK_URL_HTTP_RELATIVE_PATH: {{ index .Values "forms-flow-idm" "context-path" }}
+    GUNICORN_WORKERS: "{{ .Values.gunicorn_workers }}"
+    GUNICORN_THREADS: "{{ .Values.gunicorn_threads }}"
+    GUNICORN_TIMEOUT: "{{ .Values.gunicorn_timeout }}"
