--- a/charts/forms-flow-analytics/templates/proxy-config.yaml
+++ b/charts/forms-flow-analytics/templates/proxy-config.yaml
@@ -9,6 +9,7 @@ data:
     events { worker_connections 1024; }
     http {
       server {
+        client_max_body_size {{ .Values.maxSizePayload }};
         listen {{ .Values.ingress.port }};
         location /redash/ {
           sub_filter ="/" ="/redash/";
@@ -27,7 +28,7 @@ data:
           
           proxy_pass http://localhost:{{ .Values.server.httpPort }};
         }
-
+        
       }
     }
     pid /tmp/nginx.pid;
