--- a/charts/forms-flow-documents-api/values.yaml
+++ b/charts/forms-flow-documents-api/values.yaml
@@ -272,6 +272,9 @@ ingress:
   ##   cert-manager.io/cluster-issuer: cluster-issuer-name
   ##
   annotations: {}
+  ## nginx.ingress.kubernetes.io/proxy-body-size: 50M
+  ## if openshift add annotation
+  ## haproxy.router.openshift.io/max-body-size=50m
   ## @param ingress.labels Additional labels for the Ingress resource.
   ## e.g:
   ## labels:
@@ -456,6 +459,8 @@ service:
     annotations: {}
 
 configuration: []
+
+maxSizePayload: 50M
 
 containerPorts:
   http: 5006
