--- a/charts/forms-flow-forms/values.yaml
+++ b/charts/forms-flow-forms/values.yaml
@@ -262,6 +262,9 @@ ingress:
   ##   cert-manager.io/cluster-issuer: cluster-issuer-name
   ##
   annotations: {}
+  ## nginx.ingress.kubernetes.io/proxy-body-size: 50M
+  ## if openshift add annotation
+  ## haproxy.router.openshift.io/max-body-size=50m
   ## @param ingress.labels Additional labels for the Ingress resource.
   ## e.g:
   ## labels:
@@ -525,6 +528,8 @@ ExtraContainer:
     tag: "latest"
 
 configuration: []
+
+maxSizePayload: 50M
 
 ## forms-flow-forms Autoscaling configuration
 ## ref: https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale/
