--- a/charts/forms-flow-analytics/Chart.yaml
+++ b/charts/forms-flow-analytics/Chart.yaml
@@ -8,10 +8,10 @@ appVersion: "8.0.1"
 dependencies:
   - name: redis
     version: "^19.1.0"
-    repository: oci://registry-1.docker.io/bitnamicharts
+    repository: https://charts.bitnami.com/bitnami
     condition: redis.enabled
   - name: postgresql
     version: "^15.2.0"
-    repository: oci://registry-1.docker.io/bitnamicharts
+    repository: https://charts.bitnami.com/bitnami
     condition: postgresql.enabled
 
