--- a/charts/forms-flow-api/Chart.yaml
+++ b/charts/forms-flow-api/Chart.yaml
@@ -7,7 +7,7 @@ type: application
 appVersion: "8.0.1"
 dependencies:
 - name: common
-  repository: oci://registry-1.docker.io/bitnamicharts
+  repository: https://charts.bitnami.com/bitnami
   tags:
   - bitnami-common
-  version: 2.x.x
+  version: 2.29.1
