--- a/charts/forms-flow-idm/Chart.yaml
+++ b/charts/forms-flow-idm/Chart.yaml
@@ -7,9 +7,9 @@ dependencies:
     repository: "https://charts.bitnami.com/bitnami"
   - name: postgresql-ha
     condition: postgresql-ha.enabled 
-    repository: oci://registry-1.docker.io/bitnamicharts
-    version: 15.x.x
+    repository: https://charts.bitnami.com/bitnami
+    version: 15.1.7
   - name: common
-    repository: oci://registry-1.docker.io/bitnamicharts
-    version: 2.x.x
+    repository: https://charts.bitnami.com/bitnami
+    version: 2.29.1
 icon: "https://raw.githubusercontent.com/AOT-Technologies/forms-flow-ai/develop/.images/logo.png"
