updated redis with commonLabels

--- a/charts/forms-flow-ai/values.yaml
+++ b/charts/forms-flow-ai/values.yaml
@@ -1,6 +1,7 @@
 
 ---
 Domain: #<DEFINE_ME>
+commonLabels: {}
 formsflowdb:
   postgresql:
     fullnameOverride: forms-flow-ai-postgresql-ha-pgpool
