Adding changes for 7.0.1

--- a/charts/forms-flow-web/templates/template-configmap.yaml
+++ b/charts/forms-flow-web/templates/template-configmap.yaml
@@ -49,5 +49,6 @@ data:
         "REACT_APP_KEYCLOAK_URL_HTTP_RELATIVE_PATH": "${KEYCLOAK_URL_HTTP_RELATIVE_PATH}",
         "REACT_APP_SHOW_PREMIUM_ICON": "${REACT_APP_SHOW_PREMIUM_ICON}",
         "REACT_APP_IS_ENTERPRISE": "${REACT_APP_IS_ENTERPRISE}",
-        "REACT_APP_CLARITY_KEY": "${REACT_APP_CLARITY_KEY}"
+        "REACT_APP_CLARITY_KEY": "${REACT_APP_CLARITY_KEY}",
+        "REACT_APP_USER_NAME_DISPLAY_CLAIM": "${USER_NAME_DISPLAY_CLAIM:-preferred_username}"
       }
