removed unwanted label from analytics config

--- a/charts/forms-flow-analytics/values.yaml
+++ b/charts/forms-flow-analytics/values.yaml
@@ -30,11 +30,9 @@ volumes: []
 volumeMounts: []
 
 # commonLabels -- Redash global labels -- applied to all objects
-commonLabels:
-  Dataclass: low
+commonLabels: {}
 # selectorLabels -- Redash global selectorLabels -- applied to all objects
-selectorLabels:
-  Dataclass: low
+selectorLabels: {}
 
 ## Service account and security context configuration
 serviceAccount:
