--- a/charts/forms-flow-data-analysis/values.yaml
+++ b/charts/forms-flow-data-analysis/values.yaml
@@ -59,7 +59,7 @@ terminationGracePeriodSeconds: ""
 topologySpreadConstraints: []
 
 ## Openshift configuration for nginx
-OpenShit:
+OpenShift:
   ## proxy configuration of nginx for openshift
   enabled: false
 
