--- a/charts/forms-flow-bpm/values.yaml
+++ b/charts/forms-flow-bpm/values.yaml
@@ -579,6 +579,7 @@ camunda:
   historyLevel: auto
   securityOrigin: '*'
   logLevel: INFO
+  HeaderSize: '32000'
   formBuilder:
     password: demo # CAMUNDA_FORMBUILDER_PIPELINE_PASSWORD
     username: demo # CAMUNDA_FORMBUILDER_PIPELINE_USERNAME
