--- a/charts/forms-flow-analytics/templates/server-deployment.yaml
+++ b/charts/forms-flow-analytics/templates/server-deployment.yaml
@@ -62,6 +62,7 @@ spec:
           resources: {{ toYaml . | nindent 12 }}
           {{- end }}
         - name: nginx
+          securityContext: {{ toYaml .Values.server.securityContext | nindent 12 }}
           image: {{ .Values.server.extraContainers.image.registry }}/{{ .Values.server.extraContainers.image.repo }}:{{ .Values.server.extraContainers.image.tag }}
           ports:
             - containerPort: {{ .Values.server.extraContainers.ContainerPort }}
