--- a/charts/forms-flow-api/templates/deployment.yaml
+++ b/charts/forms-flow-api/templates/deployment.yaml
@@ -313,6 +313,9 @@ spec:
             {{- include "common.tplvalues.render" ( dict "value" .Values.sidecars "context" $) | nindent 8 }}
             {{- end }}
         - name: nginx
+          {{- if .Values.containerSecurityContext.enabled }}
+          securityContext: {{- include "common.compatibility.renderSecurityContext" (dict "secContext" .Values.containerSecurityContext "context" $) | nindent 12 }}
+          {{- end }}
           image: {{ include "forms-flow-api.nginx.image" . }}
           ports:
             - containerPort: {{ .Values.ingress.servicePort }}
