--- a/charts/forms-flow-forms/templates/deployment.yaml
+++ b/charts/forms-flow-forms/templates/deployment.yaml
@@ -122,7 +122,7 @@ spec:
           - name: FORMIO_DOMAIN
             valueFrom:
               configMapKeyRef:
-                key: FORMIO_SERVICE_URL
+                key: FORMIO_URL
                 name: "{{ .Values.formsflow.configmap }}"
           - name: MULTI_TENANCY_ENABLED
             valueFrom:
