--- a/charts/forms-flow-idm/values.yaml
+++ b/charts/forms-flow-idm/values.yaml
@@ -53,22 +53,17 @@ keycloak:
         -Djava.net.preferIPv4Stack=true
   ## @param extraVolumes Optionally specify extra list of additional volumes for Keycloak pods
   ##
-  extraVolumes: 
-    - name: formsflow-themes
-      emptyDir: {}     
+  ##extraVolumes: {}    
   ## @param extraVolumeMounts Optionally specify extra list of additional volumeMounts for Keycloak container(s)
   ##
   extraVolumeMounts: 
-    - name: "formsflow-themes"
+    - name: empty-dir
       mountPath: "/opt/bitnami/keycloak/data/import"
       subPath: import
       readOnly: false
     - mountPath: /opt/bitnami/keycloak/themes
-      name: formsflow-themes
+      name: empty-dir
       subPath: themes
-    - mountPath: /opt/bitnami/keycloak/providers
-      name: formsflow-themes
-      subPath: providers
   ## @param initContainers Add additional init containers to the Keycloak pods
   ## Example:
   ## initContainers:
@@ -87,15 +82,13 @@ keycloak:
         runAsUser: 1001
       command: ["/bin/sh","-c"]
       args:
-      - "mkdir -p /opt/bitnami/keycloak/themes && \
-         mkdir -p /opt/bitnami/keycloak/providers && \
-         mkdir -p /opt/bitnami/keycloak/import && \
+      - "mkdir -p /opt/bitnami/keycloak/themes /opt/bitnami/keycloak/providers /opt/bitnami/keycloak/import && \
          cp -rf /custom/themes/* /opt/bitnami/keycloak/themes && \
          cp -rf /custom/imports/* /opt/bitnami/keycloak/import && \
          cp -rf /custom/providers/* /opt/bitnami/keycloak/providers"
       volumeMounts:
       - mountPath: /opt/bitnami/keycloak
-        name: formsflow-themes     
+        name: empty-dir     
   ## Bitnami Keycloak image version
   ## ref: https://hub.docker.com/r/bitnami/keycloak/tags/
   ## @param image.registry [default: REGISTRY_NAME] Keycloak image registry
@@ -109,7 +102,7 @@ keycloak:
   image:
     registry: "docker.io"
     repository: "bitnami/keycloak" 
-    tag: 25.0.6-debian-12-r0
+    tag: 26.1.4-debian-12-r2
   ## PostgreSQL chart configuration
   ## ref: https://github.com/bitnami/charts/blob/main/bitnami/postgresql/values.yaml
   ## @param postgresql.enabled Switch to enable or disable the PostgreSQL helm chart
@@ -245,7 +238,7 @@ postgresql-ha:
     image:
       registry: docker.io
       repository: bitnami/postgresql-repmgr
-      tag: 17.2.0-debian-12-r3
+      tag: 17.4.0-debian-12-r14
     ## @param postgresql.replicaCount Number of replicas to deploy. Use an odd number. Having 3 replicas is the minimum to get quorum when promoting a new primary.
     ##  
     replicaCount: 3
@@ -415,7 +408,7 @@ postgresql-ha:
     image:
       registry: docker.io
       repository: bitnami/pgpool
-      tag: 4.5.5-debian-12-r0
+      tag: 4.6.0-debian-12-r4
       digest: ""
       ## Specify a imagePullPolicy. Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
       ## ref: https://kubernetes.io/docs/concepts/containers/images/#pre-pulled-images
